<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background"
    android:orientation="vertical"
    android:paddingHorizontal="16dp"
    android:paddingBottom="28dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:paddingVertical="10dp"
        android:text="@string/app_name"
        android:fontFamily="@font/ys_display_medium"
        android:textColor="@color/white"
        android:textSize="26sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button_search"
        android:text="@string/search"
        app:icon="@drawable/ic_search"
        style="@style/mainScreenButtons"/>

    <Button
        android:id="@+id/button_library"
        android:text="@string/media_library"
        app:icon="@drawable/ic_library"
        style="@style/mainScreenButtons"/>

    <Button
        android:id="@+id/button_settings"
        android:text="@string/settings"
        app:icon="@drawable/ic_settings"
        style="@style/mainScreenButtons" />

</LinearLayout>