<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        app:elevation="0dp">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/top_app_bar"
            style="@style/Widget.MaterialComponents.Toolbar.Surface"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            app:navigationIcon="@drawable/ic_back"
            app:title="@string/settings"
            app:titleTextColor="?attr/colorOnBackground"
            app:navigationIconTint="?attr/colorOnBackground"/>

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/theme_switcher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:fontFamily="@font/ys_display_regular"
        android:text="@string/dark_theme"
        android:textColor="?attr/colorOnBackground"
        android:textSize="@dimen/settings_item_text_size"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <Button
        android:id="@+id/share_app"
        style="@style/settingsButtonText"
        android:text="@string/share"
        app:icon="@drawable/ic_share" />

    <Button
        android:id="@+id/write_to_support"
        style="@style/settingsButtonText"
        android:text="@string/write_to_support"
        app:icon="@drawable/ic_support" />

    <Button
        android:id="@+id/terms_of_use"
        style="@style/settingsButtonText"
        android:text="@string/terms_of_use"
        app:icon="@drawable/ic_arrow_forward" />

</LinearLayout>