<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:paddingHorizontal="24dp">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/communication_problem_image"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/communication_problems" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/download_failed"
        android:textSize="19sp"
        android:fontFamily="@font/ys_display_medium"
        android:textColor="@color/dark_or_white"
        android:textAlignment="center"
        android:paddingBottom="24dp"/>

    <Button
        android:id="@+id/update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/dark_or_white"
        android:text="@string/update"
        android:textColor="@color/white_or_gray_dark"
        android:textAllCaps="false"
        app:cornerRadius="20dp"/>

</LinearLayout>